test invalid arr specs

--- a/spec/schemata/invalid/arr-unknown-arg.json
+++ b/spec/schemata/invalid/arr-unknown-arg.json
@@ -1,8 +1,8 @@
 {
   "schema" : {
-    "type"   : "//arr",
-    "content": { "type": "//int" },
-    "unknown": "this will cause an explosion"
+    "type"    : "//arr",
+    "contents": { "type": "//int" },
+    "unknown" : "this will cause an explosion"
   },
   "invalid": true
 }
