--- a/perl/dist.ini
+++ b/perl/dist.ini
@@ -9,6 +9,7 @@ Carp = 0
 File::Find::Rule = 0
 JSON::XS = 0
 List::Util = 0
+Module::Pluggable = 3.7
 Module::Pluggable::Object = 0
 Number::Tolerant = 0
 Scalar::Util = 0
