--- a/perl/dist.ini
+++ b/perl/dist.ini
@@ -1,5 +1,5 @@
 name    = Data-Rx
-version = 0.004
+version = 0.005
 author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
@@ -25,4 +25,4 @@ remove = BumpVersion
 root   = ../spec
 prefix = spec
 
-[PodWeaver]
+[PodPurler]
