do not require JSON::XS

--- a/perl/dist.ini
+++ b/perl/dist.ini
@@ -1,5 +1,4 @@
 name    = Data-Rx
-version = 0.007
 author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
@@ -7,7 +6,7 @@ copyright_holder = Ricardo SIGNES
 [Prereq]
 Carp = 0
 File::Find::Rule = 0
-JSON::XS = 0
+JSON = 2
 List::Util = 0
 Module::Pluggable = 3.7
 Module::Pluggable::Object = 0
@@ -16,13 +15,9 @@ Scalar::Util = 0
 Test::More = 0
 autodie = 0
 
-[@Filter]
-bundle = @Classic
-remove = PodVersion
-remove = BumpVersion
+[@RJBS]
 
 [AllFiles]
 root   = ../spec
 prefix = spec
 
-[PodPurler]
