fix dist.ini for v4 (cherry picked from commit b0a615f22ee2a9513a504d6edc351312ce768211)

--- a/perl/dist.ini
+++ b/perl/dist.ini
@@ -15,9 +15,11 @@ Scalar::Util = 0
 Test::More = 0
 autodie = 0
 
-[@RJBS]
+[@Filter]
+bundle = @RJBS
+remove = Repository
 
-[AllFiles]
+[GatherDir]
 root   = ../spec
 prefix = spec
 
