make buildable again

--- a/perl/dist.ini
+++ b/perl/dist.ini
@@ -3,7 +3,9 @@ author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
-[Prereq]
+version = 2 ; placeholder
+
+[Prereqs]
 Carp = 0
 File::Find::Rule = 0
 JSON = 2
@@ -18,6 +20,7 @@ autodie = 0
 [@Filter]
 bundle = @RJBS
 remove = Repository
+remove = Git::NextVersion
 
 [GatherDir]
 root   = ../spec
