--- a/spec/schemata/invalid/map-unknown-arg.json
+++ b/spec/schemata/invalid/map-unknown-arg.json
@@ -2,7 +2,8 @@
   "invalid": true,
 
   "schema" : {
-    "type"    : "//rec",
+    "type"    : "//map",
+    "values"  : "//any",
     "unknown" : "this will cause things to explode"
   }
 }
