update dist.ini to recent dzil

--- a/perl/dist.ini
+++ b/perl/dist.ini
@@ -3,7 +3,7 @@ author  = Ricardo SIGNES <rjbs@cpan.org>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
-[Prereq]
+[Prereqs]
 Carp = 0
 File::Find::Rule = 0
 JSON = 2
@@ -17,7 +17,6 @@ autodie = 0
 
 [@RJBS]
 
-[AllFiles]
+[GatherDir / SpecFiles]
 root   = ../spec
 prefix = spec
-
