futz with build settings

--- a/perl/dist.ini
+++ b/perl/dist.ini
@@ -17,8 +17,14 @@ autodie = 0
 
 [@Filter]
 bundle = @RJBS
-remove = Repository
+remove = Git::Tag
 remove = Git::NextVersion
+
+[Git::Tag]
+tag_format = perl-%v
+
+[Git::NextVersion]
+version_regexp  = ^perl-(.+)$
 
 [GatherDir]
 root   = ../spec
