--- a/php/composer.json
+++ b/php/composer.json
@@ -4,7 +4,9 @@
     "type": "library",
     "license": "GPL",
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "symfony/yaml": "^4.3"
+    },
     "require-dev": {
         "phpunit/phpunit": "^8"
     },
