License and composer changes

--- a/php/composer.json
+++ b/php/composer.json
@@ -5,6 +5,7 @@
     "license": "GPL",
     "minimum-stability": "stable",
     "require": {
+        "php": ">=7.1.0",
         "symfony/yaml": "^4.3"
     },
     "require-dev": {
@@ -19,5 +20,8 @@
         "psr-4": {
             "Test\\": "test/"
         }
-    }
+    },
+    "bin": [
+        "rx"
+    ]
 }
