perl: update dzil config for next release

--- a/perl/dist.ini
+++ b/perl/dist.ini
@@ -1,5 +1,5 @@
 name    = Data-Rx
-author  = Ricardo SIGNES <rjbs@cpan.org>
+author  = Ricardo SIGNES <cpan@semiotic.systems>
 license = Perl_5
 copyright_holder = Ricardo SIGNES
 
@@ -14,9 +14,10 @@ Test::More = 0
 autodie = 0
 
 [@Filter]
-bundle = @RJBS
-remove = Git::Tag
-remove = Git::NextVersion
+-bundle = @RJBS
+-remove = Git::Tag
+-remove = Git::NextVersion
+perl-window = long-term
 
 [Git::Tag]
 tag_format = perl-%v
